GiRaFFE: Renamed several files to new standard, updated nomenclature in notebooks so that they won't try to access no-longer existent files.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
@@ -13,15 +13,15 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# `GiRaFFE_HO` C code library: Boundary conditions\n",
+    "# `GiRaFFE_NRPy` C code library: Boundary conditions\n",
     "\n",
     "### Author: Patrick Nelson\n",
     "\n",
-    "This writes and documents the C code that `GiRaFFE_HO` uses to apply boundary conditions to the GRFFE quantities. \n",
+    "This writes and documents the C code that `GiRaFFE_NRPy` uses to apply boundary conditions to the GRFFE quantities. \n",
     "\n",
     "**Notebook Status:** <font color=orange><b> Self-Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** While this code has been validated against the code stored in `GiRaFFE_HO/GiRaFFE_Ccode_library` that is used by `GiRaFFE` standalone-modules, these algorithms are under active development, and it is unclear which routine documented here is the most appropriate to use, and whether or not the implementation is entirely correct. \n",
+    "**Validation Notes:** While this code has been validated against the code stored in `GiRaFFE_NRPy/GiRaFFE_Ccode_library` that is used by `GiRaFFE` standalone-modules, these algorithms are under active development, and it is unclear which routine documented here is the most appropriate to use, and whether or not the implementation is entirely correct. \n",
     "\n",
     "## Introduction: \n",
     "The functions and macros defined here fall into one of two categories. The [first](#linear) we will work with is the `FACE_UPDATE` family, which will act on a single face, looping over each point as defined by  the parameters `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. The parameters `FACEX0`, `FACEX1`, and `FACEX2` define which face on which we wish to act; that is, two of the `FACEX` parameters must be set to `NUL` (defined as 0) while the third is set to either `MAXFACE` (defined as -1) or `MINFACE` (defined as +1). For instance, if we want to fill in a ghostzone on the +x face of our grid, we must call `FACE_UPDATE` with `FACEX0 = MAXFACE`, `FACEX1 = NUL`, and `FACEX2 = NUL`. \n",
@@ -64,7 +64,7 @@
     "\n",
     "import os\n",
     "import cmdline_helper as cmd\n",
-    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions\"\n",
+    "outdir = \"GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions\"\n",
     "cmd.mkdir(outdir)"
    ]
   },
@@ -89,15 +89,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $outdir/GiRaFFE_boundary_conditions.h\n",
     "// Currently, we're using basic Cartesian boundary conditions, pending fixes by Zach.\n",
@@ -133,15 +125,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
     "// Basic Copy boundary conditions\n",
@@ -176,15 +160,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
     "// This macro acts differently in that it acts on an entire 3-vector of gfs, instead of 1.\n",
@@ -233,15 +209,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
     "void apply_bcs(const paramstruct *restrict params,REAL *gfs,REAL *aux_gfs) {\n",
@@ -286,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -327,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -384,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -435,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -491,7 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -505,7 +473,7 @@
     "#include \"../set_Cparameters.h\"\n",
     "    // This is currently modified to calculate more exact boundary conditions for StildeD. Rename if it works.\n",
     "    /*for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "#include \"../GiRaFFEfood_HO_Stilde.h\" \n",
+    "#include \"../GiRaFFEfood_NRPy_Stilde.h\" \n",
     "    }*/\n",
     "      /*idx = IDX3(i0,i1,i2);\n",
     "      out_gfs[IDX4ptS(STILDED0GF,idx)] = out_gfs_exact[IDX4ptS(STILDED0GF,idx)];\n",
@@ -535,7 +503,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -580,7 +548,7 @@
     "To validate the code in this tutorial we check for agreement between the files\n",
     "\n",
     "1. that were written in this tutorial and\n",
-    "1. those that are stored in `GiRaFFE_HO/GiRaFFE_Ccode_library`\n"
+    "1. those that are stored in `GiRaFFE_NRPy/GiRaFFE_Ccode_library`\n"
    ]
   },
   {
@@ -603,7 +571,7 @@
     "import sys\n",
     "\n",
     "# Define the directory that we wish to validate against:\n",
-    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions\"\n",
+    "valdir = \"GiRaFFE_NRPy/GiRaFFE_Ccode_library/boundary_conditions\"\n",
     "\n",
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
@@ -635,7 +603,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-GiRaFFE_HO_C_code_library-BCs.pdf](Tutorial-GiRaFFE_HO_C_code_library-BCs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-GiRaFFE_NRPy-BCs.pdf](Tutorial-GiRaFFE_NRPy-BCs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -647,8 +615,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 89743 bytes to Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -662,10 +628,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-BCs.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
