--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -13,7 +13,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# `GiRaFFE_HO` C code library: Conservative-to-Primitive and Primitive-to-Conservative Solvers\n",
+    "# `GiRaFFE_NRPy` C code library: Conservative-to-Primitive and Primitive-to-Conservative Solvers\n",
     "\n",
     "## Author: Patrick Nelson\n",
     "\n",
@@ -24,7 +24,7 @@
     "**Validation Notes:** These codes are modified versions of the working code used by the original `GiRaFFE`.\n",
     "\n",
     "## Introduction:\n",
-    "This writes and documents the C code that `GiRaFFE_HO` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections to the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
+    "This writes and documents the C code that `GiRaFFE_NRPy` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections to the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
     "\n",
     "These algorithms are adapted from the original `GiRaFFE` code (see [arxiv:1704.00599v2](https://arxiv.org/abs/1704.00599v2)), based on the description in [arXiv:1310.3274v2](https://arxiv.org/pdf/1310.3274v2.pdf). They have been modified to work with the NRPy+ infrastructure instead of the Einstein Toolkit. They have also been modified to use the Valencia 3-velocity instead of the drift velocity."
    ]
@@ -68,7 +68,7 @@
     "\n",
     "import os\n",
     "import cmdline_helper as cmd\n",
-    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/\"\n",
+    "outdir = \"GiRaFFE_NRPy/GiRaFFE_Ccode_validation/\"\n",
     "cmd.mkdir(outdir)"
    ]
   },
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Overwriting GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -156,9 +156,9 @@
     "## Step 1.a: Function definitions and inverse metric \\[Back to [top](#toc)\\]\n",
     "$$\\label{definitions}$$\n",
     "\n",
-    "The next order of business will be to write the function definitions for some functions that the main, conservative-to-primitive function will need as well as some useful macros. First, we write a basic macro to find the minimum. We write the function definition of the Primitive-to-Conservative solver, `GiRaFFE_HO_compute_conservatives` and include it from the next file we will write [below](#p2c). We define the standard indexing macros used in NRPy+ that map the values of each gridfunction at each point in three-dimensional space to the elements of a single one-dimensional array. \n",
+    "The next order of business will be to write the function definitions for some functions that the main, conservative-to-primitive function will need as well as some useful macros. First, we write a basic macro to find the minimum. We write the function definition of the Primitive-to-Conservative solver, `GiRaFFE_NRPy_compute_conservatives` and include it from the next file we will write [below](#p2c). We define the standard indexing macros used in NRPy+ that map the values of each gridfunction at each point in three-dimensional space to the elements of a single one-dimensional array. \n",
     "\n",
-    "Next, we write the function that calculates the metric determinant and inverse from the metric, `GiRaFFE_HO_update_metric_det_inverse()`. The included header file `\"metric_quantities.h\"` does most of that work for us by looping over the entire grid and performing the matrix inverse operation. \n",
+    "Next, we write the function that calculates the metric determinant and inverse from the metric, `GiRaFFE_NRPy_update_metric_det_inverse()`. The included header file `\"metric_quantities.h\"` does most of that work for us by looping over the entire grid and performing the matrix inverse operation. \n",
     "\n",
     "Notice the use of the flag `-a` in the cell magic command below - this will append to the file instead of overwriting it."
    ]
@@ -172,14 +172,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/driver_conserv_to_prims_FFE.C\n",
     "#define MIN(a,b) ( ((a) < (b)) ? (a) : (b) )\n",
-    "void GiRaFFE_HO_compute_conservatives(const REAL gxxL,const REAL gxyL,const REAL gxzL,const REAL gyyL,const REAL gyzL,const REAL gzzL,\n",
+    "void GiRaFFE_NRPy_compute_conservatives(const REAL gxxL,const REAL gxyL,const REAL gxzL,const REAL gyyL,const REAL gyzL,const REAL gzzL,\n",
     "                                      const REAL BxL, const REAL ByL, const REAL BzL, const REAL vxL, const REAL vyL, const REAL vzL,\n",
     "                                      //const REAL betaxL, const REAL betayL, const REAL betazL, const REAL alpL,\n",
     "                                      const REAL sqrtg,REAL *StildeD0L, REAL *StildeD1L, REAL *StildeD2L);\n",
@@ -217,13 +217,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/driver_conserv_to_prims_FFE.C\n",
-    "void GiRaFFE_HO_conserv_to_prims_FFE(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],\n",
+    "void GiRaFFE_NRPy_conserv_to_prims_FFE(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],\n",
     "                                     REAL *xx[3], REAL *in_gfs, REAL *aux_gfs) {\n",
     "  //printf(\"Starting conservative-to-primitive solver...\\n\");\n",
     "\n",
@@ -239,7 +239,7 @@
     "\n",
     "  int num_vel_limits=0,num_vel_nulls_current_sheet=0;\n",
     "\n",
-    "  GiRaFFE_HO_update_metric_det_inverse(Nxx_plus_2NGHOSTS, dxx, xx,aux_gfs);\n",
+    "  GiRaFFE_NRPy_update_metric_det_inverse(Nxx_plus_2NGHOSTS, dxx, xx,aux_gfs);\n",
     "\n",
     "#pragma omp parallel for reduction(+:error_int_numer,error_int_denom,num_vel_limits,num_vel_nulls_current_sheet) schedule(static)\n",
     "  for(int k=kmin;k<kmax;k++)\n",
@@ -270,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -542,7 +542,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -561,7 +561,7 @@
     "              // ValenciavU2L reset: TYPICALLY WOULD RESET CONSERVATIVES TO BE CONSISTENT. LET'S NOT DO THAT, TO AVOID MESSING UP B-FIELDS\n",
     "\n",
     "              if(1==1) {\n",
-    "                GiRaFFE_HO_compute_conservatives(gxxL, gxyL, gxzL, gyyL, gyzL, gzzL,\n",
+    "                GiRaFFE_NRPy_compute_conservatives(gxxL, gxyL, gxzL, gyyL, gyzL, gzzL,\n",
     "                                                 BU0L, BU1L, BU2L, ValenciavU0L, ValenciavU1L, ValenciavU2L,\n",
     "                                                 /*const REAL betaxL, const REAL betayL, const REAL betazL, const REAL alpL,*/\n",
     "                                                 sqrtg, &StildeD0L, &StildeD1L, &StildeD2L);\n",
@@ -591,7 +591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -639,13 +639,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation//compute_conservatives_FFE.C\n"
+      "Overwriting GiRaFFE_NRPy/GiRaFFE_Ccode_validation//compute_conservatives_FFE.C\n"
      ]
     }
    ],
    "source": [
     "%%writefile $outdir/compute_conservatives_FFE.C\n",
-    "void GiRaFFE_HO_compute_conservatives(const REAL gxxL,const REAL gxyL,const REAL gxzL,const REAL gyyL,const REAL gyzL,const REAL gzzL,\n",
+    "void GiRaFFE_NRPy_compute_conservatives(const REAL gxxL,const REAL gxyL,const REAL gxzL,const REAL gyyL,const REAL gyzL,const REAL gzzL,\n",
     "                                      const REAL BxL, const REAL ByL, const REAL BzL, const REAL vxL, const REAL vyL, const REAL vzL,\n",
     "                                      //const REAL betaxL, const REAL betayL, const REAL betazL, const REAL alpL,\n",
     "                                      const REAL sqrtg,REAL *StildeD0L, REAL *StildeD1L, REAL *StildeD2L) {\n",
@@ -696,7 +696,7 @@
     "To validate the code in this tutorial we check for agreement between the files\n",
     "\n",
     "1. that were written in this tutorial and\n",
-    "1. those that are stored in `GiRaFFE_HO/GiRaFFE_Ccode_library`\n"
+    "1. those that are stored in `GiRaFFE_NRPy/GiRaFFE_Ccode_library`\n"
    ]
   },
   {
@@ -721,7 +721,7 @@
     "import sys\n",
     "\n",
     "# Define the directory that we wish to validate against:\n",
-    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/\"\n",
+    "valdir = \"GiRaFFE_NRPy/GiRaFFE_Ccode_library/\"\n",
     "\n",
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
@@ -753,7 +753,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.pdf](Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-GiRaFFE_NRPy-C2P_P2C.pdf](Tutorial-GiRaFFE_NRPy-C2P_P2C.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -765,8 +765,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb to latex\n",
-      "[NbConvertApp] Writing 95732 bytes to Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -780,10 +778,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
