--- a/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "This notebook documents the function from the original `GiRaFFE` that implements the reconstruction algorithm used by the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf).\n",
     "\n",
-    "The differential equations that `GiRaFFE` evolves have two different terms that contribute to the time evolution of some quantity: the flux term and the source term. The PPM method is what the original `GiRaFFE` uses to handle the flux term; hopefully, using this instead of finite-differencing will fix some of the problems we've been having with `GiRaFFE_HO`.\n",
+    "The differential equations that `GiRaFFE` evolves have two different terms that contribute to the time evolution of some quantity: the flux term and the source term. The PPM method is what the original `GiRaFFE` uses to handle the flux term; hopefully, using this instead of finite-differencing will fix some of the problems we've been having with `GiRaFFE_NRPy`.\n",
     "\n",
     "This algorithm is not quite as accessible as the much simpler finite-difference methods; as such, [this notebook](https://mybinder.org/v2/gh/python-hydro/how_to_write_a_hydro_code/master) is recommended as an introduction. It covers a simpler reconstruction scheme, and proved useful in preparing the documentation for this more complicated scheme.\n",
     "\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we convert the code to work with NRPy+, we will be able to make a simplification: since `GiRaFFE_HO` does not use staggered grids, we will be able to skip reconstructing the staggered quantities\n",
+    "When we convert the code to work with NRPy+, we will be able to make a simplification: since `GiRaFFE_NRPy` does not use staggered grids, we will be able to skip reconstructing the staggered quantities\n",
     "\n",
     "The structure `gf_and_gz_struct` is a C++ structure used to keep track of ghostzone information between routines. It contains a pointer and two arrays. It is specified by the following code:\n",
     "\n",
@@ -561,7 +561,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-GiRaFFE_HO_Ccode_library-PPM.pdf](Tutorial-GiRaFFE_HO_Ccode_library-PPM.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-GiRaFFE_NRPy-PPM.pdf](Tutorial-GiRaFFE_NRPy-PPM.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -573,8 +573,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb to latex\n",
-      "[NbConvertApp] Writing 77811 bytes to Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -588,10 +586,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_HO_Ccode_library-PPM.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-PPM.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-PPM.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-PPM.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-PPM.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
