GiRaFFE_NRPy-A2B: Add Gaussian initial data to unit test.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -13,7 +13,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# `GiRaFFE_NRPy` C code library: A-to-B code\n",
+    "# `GiRaFFE_NRPy`: A-to-B code\n",
     "\n",
     "## Author: Patrick Nelson\n",
     "\n",
