--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3382,7 +3382,7 @@
     "                        + sp.Rational(256,5)*sp.log(2)) + sp.rational(64,5)*sp.log(u))\n",
     "Delta4 = sp.Rational(1,12)*(6*a2M2inv*(Delta1**2 - 2*Delta2)*etaKminus1**2 + 3*Delta1**4 - 8*etaKminus1*Delta1**3\n",
     "                           -12*Delta2*Delta1**2 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
-    "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*pi**2)*etaKminus1**2\n",
+    "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*sp.pi**2)*etaKminus1**2\n",
     "                           + 6*(Delta2**2 - 4*Delta3*etaKminus1))\n",
     "Delta3 = sp.Rational(1,3)*(-Delta1**3 + 3*etaKminus1*Delta1**2 + 3*Delta2*Delta1 - 6*etaKminus1*(-eta*K + Delta2 + 1)\n",
     "                           - 3*a2M2inv*etaKminus1**2*Delta1)\n",
@@ -4089,7 +4089,7 @@
     "\n",
     "sigma1 = S1x + S2x\n",
     "sigma2 = S1y + S2y\n",
-    "sigma3 = S3z + S3z"
+    "sigma3 = S1z + S2z"
    ]
   },
   {
@@ -4346,8 +4346,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-SEOBNR_Documentation.ipynb to latex\n",
-      "[NbConvertApp] Writing 174540 bytes to Tutorial-SEOBNR_Documentation.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -4378,21 +4376,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
