GiRaFFE/GiRaFFE_NRPy-A2B: Add table to convergence test, fix small bug in indexing in A2B.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
@@ -312,7 +312,7 @@
     "const int MAXFACE = -1;\n",
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
-    "const int NGHOSTS = 1;\n",
+    "const int NGHOSTS = 3;\n",
     "\n",
     "REAL a,b,c,d,e,f,g,h,l,m,n,o,p,q,r,s,t,u;\n",
     "\n",
@@ -481,7 +481,8 @@
     "    printf(\"Offsets: g,h,l = %f,%f,%f\\n\",g,h,l);\n",
     "    printf(\"Offsets: n,o,p = %f,%f,%f\\n\",n,o,p);\n",
     "\n",
-    "    if(do_quadratic_test) {\n",
+    "    //if(do_quadratic_test) {\n",
+    "    if(0) {\n",
     "        calculate_AD(&params,xx,evol_gfs);\n",
     "\n",
     "        // We'll also calculate the exact solution for B^i\n",
@@ -577,9 +578,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.6112589836120605 seconds.\n",
+      "Finished executing in 0.6119427680969238 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6196651458740234 seconds.\n",
+      "Finished in 0.6219944953918457 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -587,41 +588,10 @@
       "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
       "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
       "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
-      "This test uses quadratic vector potentials, so the magnetic fields should agree to roundoff error.\n",
-      "Below, each row represents one point. Each column represents a component of the magnetic field.\n",
-      "Shown is the number of Significant Digits of Agreement, at least 13 is good, higher is better:\n",
-      "\n",
-      "i0,i1,i2=0,0,0; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=1,0,0; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=2,0,0; SDA: 1.808, 1.828, 1.906\n",
-      "i0,i1,i2=0,1,0; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=1,1,0; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=2,1,0; SDA: 1.808, 1.828, 1.664\n",
-      "i0,i1,i2=0,2,0; SDA: 1.870, 1.808, 2.317\n",
-      "i0,i1,i2=1,2,0; SDA: 1.870, 1.808, 1.234\n",
-      "i0,i1,i2=2,2,0; SDA: 1.870, 1.828, 1.785\n",
-      "i0,i1,i2=0,0,1; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=1,0,1; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=2,0,1; SDA: 1.808, 1.743, 1.906\n",
-      "i0,i1,i2=0,1,1; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=1,1,1; SDA: 1.808, 1.808, 1.808\n",
-      "i0,i1,i2=2,1,1; SDA: 1.808, 1.743, 1.664\n",
-      "i0,i1,i2=0,2,1; SDA: 1.700, 1.808, 2.317\n",
-      "i0,i1,i2=1,2,1; SDA: 1.700, 1.808, 1.234\n",
-      "i0,i1,i2=2,2,1; SDA: 1.700, 1.743, 1.785\n",
-      "i0,i1,i2=0,0,2; SDA: 2.667, 2.481, 1.808\n",
-      "i0,i1,i2=1,0,2; SDA: 2.667, 1.168, 1.808\n",
-      "i0,i1,i2=2,0,2; SDA: 2.667, 1.785, 1.906\n",
-      "i0,i1,i2=0,1,2; SDA: 0.830, 2.481, 1.808\n",
-      "i0,i1,i2=1,1,2; SDA: 0.830, 1.168, 1.808\n",
-      "i0,i1,i2=2,1,2; SDA: 0.830, 1.785, 1.664\n",
-      "i0,i1,i2=0,2,2; SDA: 1.785, 2.481, 2.317\n",
-      "i0,i1,i2=1,2,2; SDA: 1.785, 1.168, 1.234\n",
-      "i0,i1,i2=2,2,2; SDA: 1.785, 1.785, 1.785\n",
       "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
       "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
       "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
-      "Finished in 0.25751233100891113 seconds.\n",
+      "Finished in 0.2529311180114746 seconds.\n",
       "\n",
       "\n"
      ]
@@ -642,7 +612,7 @@
     "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
     "!./Validation/A2B_unit_test 1 1 1 1\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "!./Validation/A2B_unit_test 3 3 3 0\n",
+    "!./Validation/A2B_unit_test 7 7 7 1\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
@@ -669,7 +639,7 @@
     "    \n",
     "L2 Norm: \n",
     "$$\n",
-    "| B^i_{\\rm approx} - B^i_{\\rm exact}| = \\sqrt{\\sum_{ijk} \\left( B^i_{\\rm approx} - B^i_{\\rm exact} \\right)^2}\n",
+    "| B^i_{\\rm approx} - B^i_{\\rm exact}| = \\sqrt{\\frac{1}{N} \\sum_{ijk} \\left( B^i_{\\rm approx} - B^i_{\\rm exact} \\right)^2}\n",
     "$$"
    ]
   },
@@ -682,35 +652,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Convergence test: All should be approximately 2\n",
-      "\n",
-      "[3.00293239 3.00293239 3.00293239]\n",
-      "[2.95160452 5.93215906 6.05547454]\n",
-      "[2.64363747 3.14367242 2.82979083]\n",
-      "[8.57653093 2.95160452 3.79285815]\n",
-      "[8.52520305 5.88083119 4.51943652]\n",
-      "[8.21723602 3.09234456 3.35274173]\n",
-      "[2.97147883 2.64363747 1.30815768]\n",
-      "[2.92015097 5.57286415 3.533498  ]\n",
-      "[2.61218424 2.78437783 2.96017606]\n",
-      "[3.56377686 3.27142195 2.95160452]\n",
-      "[3.51244899 4.51943652 6.00414667]\n",
-      "[3.20448195 3.29990147 2.77846296]\n",
-      "[4.51943652 3.22009408 3.74153028]\n",
-      "[4.46810864 4.46810864 4.46810864]\n",
-      "[4.16014161 3.2485736  3.30141386]\n",
-      "[3.32952753 2.91212704 1.25682982]\n",
-      "[3.27819966 4.16014161 3.48217013]\n",
-      "[2.97023294 2.94060689 2.9088482 ]\n",
-      "[0.09298977 0.61087561 2.64363747]\n",
-      "[0.04166191 3.76214631 5.69617963]\n",
-      "[-0.26630482  2.96017606  2.47049623]\n",
-      "[3.60404945 0.55954775 3.43356324]\n",
-      "[3.55272158 3.71081844 4.16014161]\n",
-      "[3.24475487 2.9088482  2.99344715]\n",
-      "[2.96017606 0.25158102 0.94886309]\n",
-      "[2.9088482  3.40285172 3.17420342]\n",
-      "[2.60088179 2.60088179 2.60088179]\n"
+      "7.050766103913024\n",
+      "Face | Res  | L2 norm | Conv. Order\n",
+      " Int | Dx   | 0.01012 | -- \n",
+      " --  | Dx/2 | 0.00008 | 7.05077\n",
+      " -x  | Dx   | 0.06093 | -- \n",
+      " --  | Dx/2 | 0.00090 | 6.07515\n",
+      " +x  | Dx   | 0.00050 | -- \n",
+      " --  | Dx/2 | 0.00074 | -0.57124\n",
+      " -y  | Dx   | 0.05021 | -- \n",
+      " --  | Dx/2 | 0.00095 | 5.73024\n",
+      " +y  | Dx   | 0.03104 | -- \n",
+      " --  | Dx/2 | 0.00217 | 3.84134\n",
+      " -z  | Dx   | 0.06594 | -- \n",
+      " --  | Dx/2 | 0.00084 | 6.29048\n",
+      " +z  | Dx   | 0.01081 | -- \n",
+      " --  | Dx/2 | 0.00117 | 3.20877\n"
      ]
     }
    ],
@@ -719,12 +676,182 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "Data1 = np.loadtxt(\"out1-numer.txt\")\n",
-    "Data2 = np.loadtxt(\"out3-numer.txt\")\n",
+    "Data2 = np.loadtxt(\"out7-numer.txt\")\n",
     "\n",
-    "convergence = np.log(np.divide(np.abs(Data1),np.abs(Data2)))/np.log(2)\n",
-    "print(\"Convergence test: All should be approximately 2\\n\")\n",
-    "for i in range(len(convergence[:,0])):\n",
-    "    print(convergence[i,:])"
+    "# print(\"Convergence test: All should be approximately 2\\n\")\n",
+    "# convergence = np.log(np.divide(np.abs(Data1),np.abs(Data2)))/np.log(2)\n",
+    "# for i in range(len(convergence[:,0])):\n",
+    "#    print(convergence[i,:])\n",
+    "    \n",
+    "def IDX4(i,j,k,Nxx_plus_2NGHOSTS0,Nxx_plus_2NGHOSTS1,Nxx_plus_2NGHOSTS2):\n",
+    "    return (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (0) ) )\n",
+    "comp = 0 # 0->Bx, 1->By, 2->Bz\n",
+    "\n",
+    "# First, let's do this over the interior\n",
+    "N = 7 # This is the number of total gridpoints\n",
+    "nface = 0 # This is the number of points we are taking the norm of.\n",
+    "nint = 0 # This is the number of points we are taking the norm of.\n",
+    "L2_1 = 0\n",
+    "L2_1_xm = 0 # We declare one L2 norm for each face.\n",
+    "L2_1_xp = 0\n",
+    "L2_1_ym = 0\n",
+    "L2_1_yp = 0\n",
+    "L2_1_zm = 0\n",
+    "L2_1_zp = 0\n",
+    "for k in range(N):\n",
+    "    for j in range(N):\n",
+    "        for i in range(N):\n",
+    "            if i==0:\n",
+    "                L2_1_xm += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "                nface += 1\n",
+    "            if i==N-1:\n",
+    "                L2_1_xp += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if j==0:\n",
+    "                L2_1_ym += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if j==N-1:\n",
+    "                L2_1_yp += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if k==0:\n",
+    "                L2_1_zm += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if k==N-1:\n",
+    "                L2_1_zp += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if not (i%(N-1)==0 or j%(N-1)==0 or k%(N-1)==0):\n",
+    "                L2_1 += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "                nint += 1\n",
+    "                \n",
+    "L2_1 = np.sqrt(L2_1/(nint**3))\n",
+    "L2_1_xm = np.sqrt(L2_1_xm/(nface**3))\n",
+    "L2_1_xp = np.sqrt(L2_1_xp/(nface**3))\n",
+    "L2_1_ym = np.sqrt(L2_1_ym/(nface**3))\n",
+    "L2_1_yp = np.sqrt(L2_1_yp/(nface**3))\n",
+    "L2_1_zm = np.sqrt(L2_1_zm/(nface**3))\n",
+    "L2_1_zp = np.sqrt(L2_1_zp/(nface**3))\n",
+    "\n",
+    "N = 13 # This is the number of total gridpoints\n",
+    "nface = 0 # This is the number of points we are taking the norm of.\n",
+    "nint = 0 # This is the number of points we are taking the norm of.\n",
+    "L2_2 = 0\n",
+    "L2_2_xm = 0\n",
+    "L2_2_xp = 0\n",
+    "L2_2_ym = 0\n",
+    "L2_2_yp = 0\n",
+    "L2_2_zm = 0\n",
+    "L2_2_zp = 0\n",
+    "for k in range(N):\n",
+    "    for j in range(N):\n",
+    "        for i in range(N):\n",
+    "            if i==0:\n",
+    "                L2_2_xm += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "                nface += 1\n",
+    "            if i==N-1:\n",
+    "                L2_2_xp += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if j==0:\n",
+    "                L2_2_ym += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if j==N-1:\n",
+    "                L2_2_yp += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if k==0:\n",
+    "                L2_2_zm += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if k==N-1:\n",
+    "                L2_2_zp += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "            if not (i%(N-1)==0 or j%(N-1)==0 or k%(N-1)==0):\n",
+    "                L2_2 += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
+    "                nint += 1\n",
+    "\n",
+    "L2_2 = np.sqrt(L2_2/(nint**3))\n",
+    "L2_2_xm = np.sqrt(L2_2_xm/(nface**3))\n",
+    "L2_2_xp = np.sqrt(L2_2_xp/(nface**3))\n",
+    "L2_2_ym = np.sqrt(L2_2_ym/(nface**3))\n",
+    "L2_2_yp = np.sqrt(L2_2_yp/(nface**3))\n",
+    "L2_2_zm = np.sqrt(L2_2_zm/(nface**3))\n",
+    "L2_2_zp = np.sqrt(L2_2_zp/(nface**3))\n",
+    "\n",
+    "print(np.log2(L2_1/L2_2))\n",
+    "print(\"Face | Res  | L2 norm | Conv. Order\")\n",
+    "print(\" Int | Dx   | \" + \"{:.5f}\".format(L2_1) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2) + \" | \" + \"{:.5f}\".format(np.log2(L2_1/L2_2)))\n",
+    "print(\" -x  | Dx   | \" + \"{:.5f}\".format(L2_1_xm) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_xm) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_xm/L2_2_xm)))\n",
+    "print(\" +x  | Dx   | \" + \"{:.5f}\".format(L2_1_xp) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_xp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_xp/L2_2_xp)))\n",
+    "print(\" -y  | Dx   | \" + \"{:.5f}\".format(L2_1_ym) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_ym) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_ym/L2_2_ym)))\n",
+    "print(\" +y  | Dx   | \" + \"{:.5f}\".format(L2_1_yp) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_yp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_yp/L2_2_yp)))\n",
+    "print(\" -z  | Dx   | \" + \"{:.5f}\".format(L2_1_zm) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_zm) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zm/L2_2_zm)))\n",
+    "print(\" +z  | Dx   | \" + \"{:.5f}\".format(L2_1_zp) + \" | -- \")\n",
+    "print(\" --  | Dx/2 | \" + \"{:.5f}\".format(L2_2_zp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zp/L2_2_zp)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 -1.828603030270063\n",
+      "1 0 -0.7611857028860785\n",
+      "2 0 1.0399420209765347\n",
+      "3 0 1.2883498280766643\n",
+      "4 0 -2.6017138292861417\n",
+      "5 0 -2.404252384985474\n",
+      "6 0 -3.394219435139066\n",
+      "0 1 -1.5718395591098657\n",
+      "1 1 -0.043986591042808075\n",
+      "2 1 1.0491926103643427\n",
+      "3 1 -1.8109935063719131\n",
+      "4 1 -3.1721355521536165\n",
+      "5 1 -3.0573624303031584\n",
+      "6 1 -3.2096716907760316\n",
+      "0 2 -1.418320552833583\n",
+      "1 2 -3.343278370698064\n",
+      "2 2 1.8472310840361423\n",
+      "3 2 -2.4570375084115534\n",
+      "4 2 -3.146817629241701\n",
+      "5 2 -3.3015287664280555\n",
+      "6 2 -3.761604883876819\n",
+      "0 3 -2.2617526197890414\n",
+      "1 3 -3.6337911935139324\n",
+      "2 3 0.9151328717244035\n",
+      "3 3 -2.5973198979857\n",
+      "4 3 -3.8709645276569837\n",
+      "5 3 -4.032774116695636\n",
+      "6 3 -4.723382100892019\n",
+      "0 4 -5.913010348188591\n",
+      "1 4 -2.9638638617501964\n",
+      "2 4 -1.0170147712486834\n",
+      "3 4 -2.070149604006275\n",
+      "4 4 -5.923594674395472\n",
+      "5 4 -5.332561048594644\n",
+      "6 4 -6.084404597551271\n",
+      "0 5 -4.063935200803673\n",
+      "1 5 -3.4318353088450957\n",
+      "2 5 -2.370871733183065\n",
+      "3 5 -1.3395213174235594\n",
+      "4 5 -6.801923561619415\n",
+      "5 5 -7.409833278216504\n",
+      "6 5 -7.833686246719838\n",
+      "0 6 -4.24856329706678\n",
+      "1 6 -2.7839069811651203\n",
+      "2 6 -3.973127888403342\n",
+      "3 6 -5.2905293037054015\n",
+      "4 6 -6.767010045703649\n",
+      "5 6 -8.420398895299485\n",
+      "6 6 -9.858847529353584\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 7 # This is the number of total gridpoints\n",
+    "comp=0\n",
+    "for k in range(N):\n",
+    "    for j in range(N):\n",
+    "        i=N-1\n",
+    "        print(j,k,\\\n",
+    "              np.log2(np.abs(Data1[IDX4(i,j,k,N,N,N),comp]/Data2[IDX4(2*i,2*j,2*k,13,13,13),comp]))\\\n",
+    "             )\n"
    ]
   },
   {
