--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -88,11 +88,11 @@
    "outputs": [],
    "source": [
     "# Step 1: The A-to-B driver\n",
-    "from outputC import *\n",
-    "import grid as gri\n",
-    "import indexedexp as ixp\n",
-    "import NRPy_param_funcs as par\n",
-    "import finite_difference as fin\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
     "# Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
@@ -160,8 +160,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ccode'></a>\n",
+    "\n",
+    "## Step 2: C code \\[Back to [top](#toc)\\]\n",
+    "$$\\label{ccode}$$\n",
+    "\n",
+    "With the header files created to actually calculate $B^i$ from $A_k$, we will write the C code to direct how those are used. We will start by including needed header files. We will then define `REAL` as type `double` (so that we can easily change it everywhere if we want to use a different precision) and the `IDX` macros that we use to access specific points in the gridfunction arrays. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_NRPy/GiRaFFE_Ccode_validation/A2B//driver_AtoB.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile $outdir/driver_AtoB.h\n",
+    "#include <math.h>\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "\n",
+    "#ifndef REAL\n",
+    "#define REAL double\n",
+    "#include \"NGHOSTS.h\" // A NRPy+-generated file, which is set based on FD_CENTDERIVS_ORDER.\n",
+    "#include \"../CurviBoundaryConditions/gridfunction_defines.h\"\n",
+    "#define IDX4S(g,i,j,k) \\\n",
+    "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
+    "#endif\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,31 +294,29 @@
     "name=\"driver_A_to_B\"\n",
     "driver_Ccode = outCfunction(\n",
     "    outfile  = \"returnstring\", desc=desc, name=name,\n",
-    "    params   =\"const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict auxevol_gfs\",\n",
-    "    preloop  =\"\"\"\n",
-    "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
-    "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
-    "\"\"\",\n",
+    "    params   = \"const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict auxevol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
     "                              params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    postloop = \"\"\"\n",
-    "        // Now, we loop over the ghostzones to calculate the magnetic field there. \n",
-    "        for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
-    "            // After updating each face, adjust imin[] and imax[] \n",
-    "            //   to reflect the newly-updated face extents.\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2]); imin[0]--;\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2]); imax[0]++;\n",
+    "    int imin[3] = { NGHOSTS_A2B, NGHOSTS_A2B, NGHOSTS_A2B };\n",
+    "    int imax[3] = { NGHOSTS+Nxx0, NGHOSTS+Nxx1, NGHOSTS+Nxx2 };\n",
+    "    // Now, we loop over the ghostzones to calculate the magnetic field there. \n",
+    "    for(int which_gz = 0; which_gz < NGHOSTS_A2B; which_gz++) {\n",
+    "        // After updating each face, adjust imin[] and imax[] \n",
+    "        //   to reflect the newly-updated face extents.\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2]); imin[0]--;\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2]); imax[0]++;\n",
     "\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2]); imin[1]--;\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2]); imax[1]++;\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2]); imin[1]--;\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2]); imax[1]++;\n",
     "\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2]); imin[2]--;\n",
-    "            compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1); imax[2]++;\n",
-    "        }\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2]); imin[2]--;\n",
+    "        compute_A2B_in_ghostzones(params,in_gfs,auxevol_gfs,imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1); imax[2]++;\n",
+    "    }\n",
     "\"\"\",\n",
-    "    loopopts=\"InteriorPoints\")\n",
+    "    loopopts=\"InteriorPoints\").replace(\"=NGHOSTS\",\"=NGHOSTS_A2B\").replace(\"NGHOSTS+Nxx0\",\"Nxx_plus_2NGHOSTS0-NGHOSTS_A2B\").replace(\"NGHOSTS+Nxx1\",\"Nxx_plus_2NGHOSTS1-NGHOSTS_A2B\").replace(\"NGHOSTS+Nxx2\",\"Nxx_plus_2NGHOSTS2-NGHOSTS_A2B\")\n",
     "\n",
     "with open(os.path.join(outdir,\"driver_AtoB.h\"),\"a\") as file:\n",
     "    file.write(driver_Ccode)\n"
@@ -310,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -373,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
