--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
@@ -156,9 +156,10 @@
     "const REAL xxmin[3] = {-0.01,-0.01,-0.01};\n",
     "const REAL xxmax[3] = { 0.01, 0.01, 0.01};\n",
     "\n",
-    "params.dxx0 = (xxmax[0] - xxmin[0]) / ((REAL)params.Nxx0);\n",
-    "params.dxx1 = (xxmax[1] - xxmin[1]) / ((REAL)params.Nxx1);\n",
-    "params.dxx2 = (xxmax[2] - xxmin[2]) / ((REAL)params.Nxx2);\n",
+    "params.dxx0 = (xxmax[0] - xxmin[0]) / ((REAL)params.Nxx_plus_2NGHOSTS0-1.0);\n",
+    "params.dxx1 = (xxmax[1] - xxmin[1]) / ((REAL)params.Nxx_plus_2NGHOSTS1-1.0);\n",
+    "params.dxx2 = (xxmax[2] - xxmin[2]) / ((REAL)params.Nxx_plus_2NGHOSTS2-1.0);\n",
+    "printf(\"dxx0,dxx1,dxx2 = %.5e,%.5e,%.5e\\\\n\",params.dxx0,params.dxx1,params.dxx2);\n",
     "params.invdx0 = 1.0 / params.dxx0;\n",
     "params.invdx1 = 1.0 / params.dxx1;\n",
     "params.invdx2 = 1.0 / params.dxx2;\n",
@@ -313,6 +314,7 @@
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
     "const int NGHOSTS = 3;\n",
+    "const int NGHOSTS_A2B = 1;\n",
     "\n",
     "REAL a,b,c,d,e,f,g,h,l,m,n,o,p,q,r,s,t,u;\n",
     "\n",
@@ -431,6 +433,9 @@
     "    for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) xx[0][j] = xxmin[0] + ((REAL)(j))*dxx0;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] = xxmin[1] + ((REAL)(j))*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] = xxmin[2] + ((REAL)(j))*dxx2;\n",
+    "    \n",
+    "    for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) printf(\"x[%d] = %.5e\\n\",j,xx[0][j]);\n",
+    "\n",
     "    //for(int i=0;i<Nxx_plus_2NGHOSTS0;i++) printf(\"xx[0][%d] = %.15e\\\\n\",i,xx[0][i]);\n",
     "    \n",
     "    // This is the array to which we'll write the NRPy+ variables.\n",
@@ -517,9 +522,6 @@
     "    // And now for the numerical derivatives:\n",
     "    driver_A_to_B(&params,evol_gfs,auxevol_gfs);\n",
     "    \n",
-    "    // Some variables needed for the loop:\n",
-    "    int ghost_zone_overlap; int indices[3];int num_points[3];\n",
-    "    \n",
     "    char filename[100];\n",
     "    sprintf(filename,\"out%d-numer.txt\",Nxx0);\n",
     "    FILE *out2D = fopen(filename, \"w\");\n",
@@ -574,20 +576,42 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.8163366317749023 seconds.\n",
+      "Finished executing in 0.6094470024108887 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.8277890682220459 seconds.\n",
+      "Finished in 0.6189768314361572 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
+      "dxx0,dxx1,dxx2 = 3.33333e-03,3.33333e-03,3.33333e-03\n",
+      "x[0] = -1.00000e-02\n",
+      "x[1] = -6.66667e-03\n",
+      "x[2] = -3.33333e-03\n",
+      "x[3] = 4.33681e-19\n",
+      "x[4] = 3.33333e-03\n",
+      "x[5] = 6.66667e-03\n",
+      "x[6] = 1.00000e-02\n",
       "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
       "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
       "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
+      "dxx0,dxx1,dxx2 = 1.66667e-03,1.66667e-03,1.66667e-03\n",
+      "x[0] = -1.00000e-02\n",
+      "x[1] = -8.33333e-03\n",
+      "x[2] = -6.66667e-03\n",
+      "x[3] = -5.00000e-03\n",
+      "x[4] = -3.33333e-03\n",
+      "x[5] = -1.66667e-03\n",
+      "x[6] = 4.33681e-19\n",
+      "x[7] = 1.66667e-03\n",
+      "x[8] = 3.33333e-03\n",
+      "x[9] = 5.00000e-03\n",
+      "x[10] = 6.66667e-03\n",
+      "x[11] = 8.33333e-03\n",
+      "x[12] = 1.00000e-02\n",
       "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
       "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
       "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
-      "Finished in 0.2517073154449463 seconds.\n",
+      "Finished in 0.2543017864227295 seconds.\n",
       "\n",
       "\n"
      ]
@@ -625,9 +649,6 @@
     "where $k$ is the convergence order, $F$ is the exact solution, $F_1$ is the approximate solution on the coarser grid with resolution $\\Delta x$, and $F_2$ is the approximate solution on the finer grid with resolution $\\Delta x/2$.\n",
     "\n",
     "**TODO:**\n",
-    "* Table: `Face | Delta x | L2 norm of Abs. Error | Convergence order`\n",
-    "    * Calculate L2 norm for both Interior and Boundary separately\n",
-    "* List: L2 Norm on Interior, each face (separately)\n",
     "* Plot: Abs. error of $B^i$ on X axis (incl. ghosts)\n",
     "    * plot Low, High, Rescaled low\n",
     "    * Repeat for each axis.\n",
@@ -648,240 +669,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.0006823017021286338\n",
-      "1 0.0029829553754219043\n",
-      "2 0.006449112205579674\n",
-      "3 0.0011818096437691858\n",
-      "4 9.822287679415621e-05\n",
-      "5 0.00031465591484394095\n",
-      "6 0.0010612369723914318\n",
-      "7 0.0029829553754218982\n",
-      "8 0.0006823017021286396\n",
-      "9 0.0035543561185303607\n",
-      "10 0.0005509880885521773\n",
-      "11 0.00019834461865290891\n",
-      "12 0.0003571275548255284\n",
-      "13 0.0010460570298578525\n",
-      "14 0.002916057182764389\n",
-      "15 2.130109571511001e-05\n",
-      "16 0.0010801849290534328\n",
-      "17 0.00013342321329415756\n",
-      "18 0.0001519269036999965\n",
-      "19 0.00020459625380930894\n",
-      "20 0.0005458497335642565\n",
-      "21 0.0006582672350356785\n",
-      "22 2.7445679818671577e-05\n",
-      "23 0.0003748335822326356\n",
-      "24 5.1296628595469864e-05\n",
-      "25 3.7037927497770614e-05\n",
-      "26 5.51329443680155e-05\n",
-      "27 0.0001522174689819782\n",
-      "28 2.8126912011646157e-06\n",
-      "29 0.00010293443305991563\n",
-      "30 0.0001773976326725777\n",
-      "31 3.429296967149081e-05\n",
-      "32 1.292224486451335e-06\n",
-      "33 6.301077163895544e-06\n",
-      "34 2.2925721920910372e-05\n",
-      "35 2.32606853371986e-05\n",
-      "36 6.573232531878612e-05\n",
-      "37 5.6852868925555136e-05\n",
-      "38 1.3328516293167674e-05\n",
-      "39 2.1037653489802802e-07\n",
-      "40 2.3253691821795696e-07\n",
-      "41 1.886910347633461e-06\n",
-      "42 0.00013894814423160142\n",
-      "43 0.00012376820169802217\n",
-      "44 5.9959204939942085e-05\n",
-      "45 1.719489889803652e-05\n",
-      "46 3.154513847893247e-06\n",
-      "47 3.799635778444147e-07\n",
-      "48 2.9706984069742076e-08\n",
-      "0 0.008608057894998484\n",
-      "1 0.013757578249484629\n",
-      "2 0.008568922483279161\n",
-      "3 0.004383050553743436\n",
-      "4 0.0015254305822409984\n",
-      "5 0.00014417501076716252\n",
-      "6 0.0001980996203627806\n",
-      "7 0.0014724811825779236\n",
-      "8 0.003619098932855582\n",
-      "9 0.006213180790747715\n",
-      "10 0.008817390398011028\n",
-      "11 0.01104239958817324\n",
-      "12 0.11731028654956822\n",
-      "13 0.02869902984409617\n",
-      "14 0.0018785865899854568\n",
-      "15 0.0002932857107477727\n",
-      "16 0.00010540800763741164\n",
-      "17 0.0014403656714342336\n",
-      "18 0.004228966910307625\n",
-      "19 0.008212994265312738\n",
-      "20 0.012978692946567281\n",
-      "21 0.01801280001929636\n",
-      "22 0.022771986698773047\n",
-      "23 0.026754548529000704\n",
-      "24 0.0295632070492709\n",
-      "25 0.08283439588252568\n",
-      "26 0.026362613816763962\n",
-      "27 0.0028480549044617044\n",
-      "28 0.0007252020470667212\n",
-      "29 5.782139893257174e-07\n",
-      "30 0.0008300113757279462\n",
-      "31 0.003170511428913188\n",
-      "32 0.006783736104026526\n",
-      "33 0.011268240209726067\n",
-      "34 0.016115223201364486\n",
-      "35 0.020778584494455635\n",
-      "36 0.02474793453599734\n",
-      "37 0.027613157618011724\n",
-      "38 0.08953034803350984\n",
-      "39 0.0236886188634486\n",
-      "40 0.0040226789857126565\n",
-      "41 0.0013646651876838237\n",
-      "42 8.343613597371145e-05\n",
-      "43 0.0003647745118202133\n",
-      "44 0.0021940983494258097\n",
-      "45 0.005357636649508183\n",
-      "46 0.00947289934880011\n",
-      "47 0.014043321610302448\n",
-      "48 0.018527956906781155\n",
-      "49 0.022414831599183227\n",
-      "50 0.025286436857735496\n",
-      "51 0.09548248239775324\n",
-      "52 0.020830998891947557\n",
-      "53 0.005357636649508183\n",
-      "54 0.0021940983494261428\n",
-      "55 0.0003647745118202133\n",
-      "56 8.343613597371145e-05\n",
-      "57 0.0013646651876835611\n",
-      "58 0.0040226789857126565\n",
-      "59 0.007699575766911578\n",
-      "60 0.011918118013230035\n",
-      "61 0.01615011627440209\n",
-      "62 0.019889142434269595\n",
-      "63 0.022716080046767735\n",
-      "64 0.10041183561404561\n",
-      "65 0.017937866344242312\n",
-      "66 0.006783736104025941\n",
-      "67 0.0031705114289135882\n",
-      "68 0.0008300113757279462\n",
-      "69 5.782139893243666e-07\n",
-      "70 0.0007252020470665298\n",
-      "71 0.0028480549044620834\n",
-      "72 0.006040182065713041\n",
-      "73 0.009849763194106773\n",
-      "74 0.013768307727876737\n",
-      "75 0.017301775255037004\n",
-      "76 0.020035310543200187\n",
-      "77 0.10406291594416898\n",
-      "78 0.015139551214949325\n",
-      "79 0.008212994265312738\n",
-      "80 0.004228966910307625\n",
-      "81 0.0014403656714342336\n",
-      "82 0.00010540800763741164\n",
-      "83 0.000293285710747651\n",
-      "84 0.0018785865899854568\n",
-      "85 0.004564227954374718\n",
-      "86 0.007928655481668651\n",
-      "87 0.011489073038458622\n",
-      "88 0.014770089816981361\n",
-      "89 0.017366799180321673\n",
-      "90 0.10622430127876473\n",
-      "91 0.012539964712126681\n",
-      "92 0.009547279448852712\n",
-      "93 0.005289411583943767\n",
-      "94 0.0021376201184017548\n",
-      "95 0.00036429653651284566\n",
-      "96 6.13534399353068e-05\n",
-      "97 0.0011328144566724247\n",
-      "98 0.003314913598260114\n",
-      "99 0.006219828330156382\n",
-      "100 0.009395295156884058\n",
-      "101 0.012390007119889036\n",
-      "102 0.014814261996864548\n",
-      "103 0.10674723651763626\n",
-      "104 0.010211957849381451\n",
-      "105 0.0106888715215936\n",
-      "106 0.006265915412433625\n",
-      "107 0.002851730539654542\n",
-      "108 0.0007265269425775703\n",
-      "109 4.554051688613719e-07\n",
-      "110 0.0006047269839774084\n",
-      "111 0.00230892096148185\n",
-      "112 0.004760990605939864\n",
-      "113 0.007542761596464942\n",
-      "114 0.010231432814154116\n",
-      "115 0.012457114819831045\n",
-      "116 0.10556005298469028\n",
-      "117 0.008196712791519619\n",
-      "118 0.011551436664104433\n",
-      "119 0.007076939223535726\n",
-      "120 0.0035100635777090554\n",
-      "121 0.0011322229453349026\n",
-      "122 6.666245694855559e-05\n",
-      "123 0.00026852300378720737\n",
-      "124 0.001539503224768958\n",
-      "125 0.0035640144705846874\n",
-      "126 0.0059602124280274185\n",
-      "127 0.00833710020329411\n",
-      "128 0.010348395913390342\n",
-      "129 0.1026765946621641\n",
-      "130 0.006506617817279456\n",
-      "131 0.012069818632148541\n",
-      "132 0.00765507997471622\n",
-      "133 0.004046794887429534\n",
-      "134 0.0015211057225186103\n",
-      "135 0.00020892069375228473\n",
-      "136 8.535992011225927e-05\n",
-      "137 0.0009819974714277014\n",
-      "138 0.0026191678917816003\n",
-      "139 0.004652332858760897\n",
-      "140 0.006724439208372869\n",
-      "141 0.008515687252895286\n",
-      "142 0.0981974793360028\n",
-      "143 0.005130652268671749\n",
-      "144 0.012207232626506543\n",
-      "145 0.007954846807654991\n",
-      "146 0.004411020041472012\n",
-      "147 0.0018406632305023054\n",
-      "148 0.0003769997328608134\n",
-      "149 1.0824757557559831e-05\n",
-      "150 0.0006006086717060008\n",
-      "151 0.0019010648422101203\n",
-      "152 0.0036047946365309357\n",
-      "153 0.0053897054279186864\n",
-      "154 0.006964390744836035\n",
-      "155 0.09230385943063699\n",
-      "156 0.050204509987304455\n",
-      "157 0.002950087489450332\n",
-      "158 0.005870675746982799\n",
-      "159 0.00985891120958782\n",
-      "160 0.014788264425865618\n",
-      "161 0.020403243657628817\n",
-      "162 0.026339992885680112\n",
-      "163 0.03216372341665605\n",
-      "164 0.037417817088528614\n",
-      "165 0.0416773767626727\n",
-      "166 0.044599219073879745\n",
-      "167 0.04596094628057768\n",
-      "168 0.02561393017999789\n",
-      "7.0507661039130465\n",
       "Face | Res  | L2 norm | Conv. Order\n",
-      " Int | Dx   | 0.0101206 | -- \n",
-      " --  | Dx/2 | 0.0000763 | 7.05077\n",
-      " -x  | Dx   | 0.0609278 | -- \n",
-      " --  | Dx/2 | 0.0009037 | 6.07515\n",
-      " +x  | Dx   | 0.0004999 | -- \n",
-      " --  | Dx/2 | 0.0007428 | -0.57124\n",
-      " -y  | Dx   | 0.0502081 | -- \n",
-      " --  | Dx/2 | 0.0009458 | 5.73024\n",
-      " +y  | Dx   | 0.0310392 | -- \n",
-      " --  | Dx/2 | 0.0021655 | 3.84134\n",
-      " -z  | Dx   | 0.0659359 | -- \n",
-      " --  | Dx/2 | 0.0008424 | 6.29048\n",
-      " +z  | Dx   | 0.0108124 | -- \n",
-      " --  | Dx/2 | 0.0011695 | 3.20877\n"
+      " Int | Dx   | 0.0817002 | -- \n",
+      " --  | Dx/2 | 0.0225991 | 1.85408\n",
+      " -x  | Dx   | 0.1475312 | -- \n",
+      " --  | Dx/2 | 0.0344243 | 2.09952\n",
+      " +x  | Dx   | 0.1475312 | -- \n",
+      " --  | Dx/2 | 0.0344243 | 2.09952\n",
+      " -y  | Dx   | 0.2427657 | -- \n",
+      " --  | Dx/2 | 0.0698011 | 1.79824\n",
+      " +y  | Dx   | 0.2427657 | -- \n",
+      " --  | Dx/2 | 0.0698011 | 1.79824\n",
+      " -z  | Dx   | 0.1624672 | -- \n",
+      " --  | Dx/2 | 0.0405504 | 2.00236\n",
+      " +z  | Dx   | 0.1624672 | -- \n",
+      " --  | Dx/2 | 0.0405504 | 2.00236\n"
      ]
     }
    ],
@@ -912,7 +714,6 @@
     "L2_1_yp = 0\n",
     "L2_1_zm = 0\n",
     "L2_1_zp = 0\n",
-    "count=0\n",
     "for k in range(N):\n",
     "    for j in range(N):\n",
     "        for i in range(N):\n",
@@ -921,8 +722,6 @@
     "                nface += 1\n",
     "            if i==N-1:\n",
     "                L2_1_xp += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
-    "                print(count,Data1[IDX4(i,j,k,N,N,N),comp]**2)\n",
-    "                count += 1\n",
     "            if j==0:\n",
     "                L2_1_ym += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
     "            if j==N-1:\n",
@@ -935,13 +734,13 @@
     "                L2_1 += Data1[IDX4(i,j,k,N,N,N),comp]**2\n",
     "                nint += 1\n",
     "                \n",
-    "L2_1 = np.sqrt(L2_1/(nint**3))\n",
-    "L2_1_xm = np.sqrt(L2_1_xm/(nface**3))\n",
-    "L2_1_xp = np.sqrt(L2_1_xp/(nface**3))\n",
-    "L2_1_ym = np.sqrt(L2_1_ym/(nface**3))\n",
-    "L2_1_yp = np.sqrt(L2_1_yp/(nface**3))\n",
-    "L2_1_zm = np.sqrt(L2_1_zm/(nface**3))\n",
-    "L2_1_zp = np.sqrt(L2_1_zp/(nface**3))\n",
+    "L2_1 = np.sqrt(L2_1/(nint))\n",
+    "L2_1_xm = np.sqrt(L2_1_xm/(nface))\n",
+    "L2_1_xp = np.sqrt(L2_1_xp/(nface))\n",
+    "L2_1_ym = np.sqrt(L2_1_ym/(nface))\n",
+    "L2_1_yp = np.sqrt(L2_1_yp/(nface))\n",
+    "L2_1_zm = np.sqrt(L2_1_zm/(nface))\n",
+    "L2_1_zp = np.sqrt(L2_1_zp/(nface))\n",
     "\n",
     "N = 13 # This is the number of total gridpoints\n",
     "nface = 0 # This is the number of points we are taking the norm of.\n",
@@ -953,7 +752,6 @@
     "L2_2_yp = 0\n",
     "L2_2_zm = 0\n",
     "L2_2_zp = 0\n",
-    "count=0\n",
     "for k in range(N):\n",
     "    for j in range(N):\n",
     "        for i in range(N):\n",
@@ -962,8 +760,6 @@
     "                nface += 1\n",
     "            if i==N-1:\n",
     "                L2_2_xp += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
-    "                print(count,Data2[IDX4(i,j,k,N,N,N),comp]**2)\n",
-    "                count += 1\n",
     "            if j==0:\n",
     "                L2_2_ym += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
     "            if j==N-1:\n",
@@ -976,15 +772,14 @@
     "                L2_2 += Data2[IDX4(i,j,k,N,N,N),comp]**2\n",
     "                nint += 1\n",
     "\n",
-    "L2_2 = np.sqrt(L2_2/(nint**3))\n",
-    "L2_2_xm = np.sqrt(L2_2_xm/(nface**3))\n",
-    "L2_2_xp = np.sqrt(L2_2_xp/(nface**3))\n",
-    "L2_2_ym = np.sqrt(L2_2_ym/(nface**3))\n",
-    "L2_2_yp = np.sqrt(L2_2_yp/(nface**3))\n",
-    "L2_2_zm = np.sqrt(L2_2_zm/(nface**3))\n",
-    "L2_2_zp = np.sqrt(L2_2_zp/(nface**3))\n",
+    "L2_2 = np.sqrt(L2_2/(nint))\n",
+    "L2_2_xm = np.sqrt(L2_2_xm/(nface))\n",
+    "L2_2_xp = np.sqrt(L2_2_xp/(nface))\n",
+    "L2_2_ym = np.sqrt(L2_2_ym/(nface))\n",
+    "L2_2_yp = np.sqrt(L2_2_yp/(nface))\n",
+    "L2_2_zm = np.sqrt(L2_2_zm/(nface))\n",
+    "L2_2_zp = np.sqrt(L2_2_zp/(nface))\n",
     "\n",
-    "print(np.log2(L2_1/L2_2))\n",
     "print(\"Face | Res  | L2 norm | Conv. Order\")\n",
     "print(\" Int | Dx   | \" + \"{:.7f}\".format(L2_1) + \" | -- \")\n",
     "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2) + \" | \" + \"{:.5f}\".format(np.log2(L2_1/L2_2)))\n",
@@ -1000,78 +795,6 @@
     "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zm) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zm/L2_2_zm)))\n",
     "print(\" +z  | Dx   | \" + \"{:.7f}\".format(L2_1_zp) + \" | -- \")\n",
     "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zp/L2_2_zp)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 -1.8286030302687784\n",
-      "1 0 -0.7611857028856374\n",
-      "2 0 1.0399420209765429\n",
-      "3 0 1.2883498280715426\n",
-      "4 0 -2.601713829285963\n",
-      "5 0 -2.4042523849858037\n",
-      "6 0 -3.394219435139066\n",
-      "0 1 -1.5718395591098482\n",
-      "1 1 -0.04398659104288337\n",
-      "2 1 1.0491926103643574\n",
-      "3 1 -1.810993506372023\n",
-      "4 1 -3.172135552153611\n",
-      "5 1 -3.0573624303030305\n",
-      "6 1 -3.2096716907760316\n",
-      "0 2 -1.4183205528335947\n",
-      "1 2 -3.343278370698247\n",
-      "2 2 1.8472310840361374\n",
-      "3 2 -2.457037508411627\n",
-      "4 2 -3.1468176292415815\n",
-      "5 2 -3.301528766428335\n",
-      "6 2 -3.761604883876808\n",
-      "0 3 -2.261752619788961\n",
-      "1 3 -3.633791193513822\n",
-      "2 3 0.9151328717242297\n",
-      "3 3 -2.5973198979857703\n",
-      "4 3 -3.8709645276569575\n",
-      "5 3 -4.032774116695635\n",
-      "6 3 -4.723382100892019\n",
-      "0 4 -5.9130103481898075\n",
-      "1 4 -2.9638638617501956\n",
-      "2 4 -1.0170147712486703\n",
-      "3 4 -2.070149604006517\n",
-      "4 4 -5.923594674395498\n",
-      "5 4 -5.332561048594648\n",
-      "6 4 -6.084404597551268\n",
-      "0 5 -4.063935200801754\n",
-      "1 5 -3.4318353088451623\n",
-      "2 5 -2.370871733183065\n",
-      "3 5 -1.3395213174236449\n",
-      "4 5 -6.801923561619432\n",
-      "5 5 -7.409833278216053\n",
-      "6 5 -7.833686246717798\n",
-      "0 6 -4.248563297067512\n",
-      "1 6 -2.7839069811651203\n",
-      "2 6 -3.973127888403371\n",
-      "3 6 -5.290529303704421\n",
-      "4 6 -6.767010045703648\n",
-      "5 6 -8.420398895299497\n",
-      "6 6 -9.85884752935357\n"
-     ]
-    }
-   ],
-   "source": [
-    "N = 7 # This is the number of total gridpoints\n",
-    "comp=0\n",
-    "for k in range(N):\n",
-    "    for j in range(N):\n",
-    "        i=N-1\n",
-    "        print(j,k,\\\n",
-    "              np.log2(np.abs(Data1[IDX4(i,j,k,N,N,N),comp]/Data2[IDX4(2*i,2*j,2*k,13,13,13),comp]))\\\n",
-    "             )\n"
    ]
   },
   {
